Part 2e in progress

--- a/readme
+++ b/readme
@@ -147,7 +147,7 @@ Part 2a:  11.935859 seconds
 
 Part 2b:  2.788640 seconds
 
-Part 2d:  _____ seconds
+Part 2d:  7.860940 seconds
 
 Part 2e:  _____ seconds
 
