--- a/readme
+++ b/readme
@@ -149,7 +149,7 @@ Part 2b:  2.788640 seconds
 
 Part 2d:  7.860940 seconds
 
-Part 2e:  _____ seconds
+Part 2e:  3.399377 seconds
 
 Part 2f:  _____ seconds
 
